update sort parameter